Localize filter name

--- a/src/main/resources/PublishR_strings_ru.properties
+++ b/src/main/resources/PublishR_strings_ru.properties
@@ -2,3 +2,4 @@ POPUP_MENU_INSERT_FOOTNOTE=Вставить сноску PublishR
 FOOTNOTE_TEXT_HINT=Tекст сноски
 PLAIN_FOOTNOTES=Простые теги для сносок (до версии 1.0)
 SETTINGS_TITLE=Настройки фильтра PublishR
+FILTER_NAME=Документы PublishR
