--- a/src/main/resources/PublishR_strings_ru.properties
+++ b/src/main/resources/PublishR_strings_ru.properties
@@ -1,5 +1,6 @@
 POPUP_MENU_INSERT_FOOTNOTE=Вставить сноску PublishR
-FOOTNOTE_TEXT_HINT=Tекст сноски
+FOOTNOTE_TEXT_STUB=Введите здесь текст сноски
+FOOTNOTE_HINT=Дополнительная сноска
 PLAIN_SHORTCUTS=Использовать простые теги (до версии 1.0)
 SETTINGS_TITLE=Настройки фильтра PublishR
 FILTER_NAME=Документы PublishR
