Allow original formatting through context menu

--- a/src/main/resources/PublishR_strings_ru.properties
+++ b/src/main/resources/PublishR_strings_ru.properties
@@ -1,6 +1,16 @@
-POPUP_MENU_INSERT_FOOTNOTE=Вставить сноску PublishR
+FILTER_NAME=Документы PublishR
+
+SETTINGS_TITLE=Настройки фильтра PublishR
+SETTINGS_PLAIN_SHORTCUTS=Использовать простые теги (до версии 1.0)
+
+POPUP_MENU_NAME=Форматирование PublishR
+POPUP_MENU_FORMAT_STRONG=Выделение жирным
+POPUP_MENU_FORMAT_EMPHASIS=Выделение курсивом
+POPUP_MENU_FORMAT_SUPERSCRIPT=Надстрочный текст
+POPUP_MENU_FORMAT_SUBSCRIPT=Подстрочный текст
+POPUP_MENU_FORMAT_NAME=Имя человека
+POPUP_MENU_FORMAT_TITLE=Название работы
+POPUP_MENU_INSERT_FOOTNOTE=Дополнительная сноска
+
 FOOTNOTE_TEXT_STUB=Введите здесь текст сноски
 FOOTNOTE_HINT=Дополнительная сноска
-PLAIN_SHORTCUTS=Использовать простые теги (до версии 1.0)
-SETTINGS_TITLE=Настройки фильтра PublishR
-FILTER_NAME=Документы PublishR
