Pass formatting metadata to translation comments

--- a/src/main/resources/PublishR_strings_ru.properties
+++ b/src/main/resources/PublishR_strings_ru.properties
@@ -14,3 +14,12 @@ POPUP_MENU_INSERT_FOOTNOTE=Дополнительная сноска
 
 FOOTNOTE_TEXT_STUB=Введите здесь текст сноски
 FOOTNOTE_HINT=Дополнительная сноска
+
+FMT_BLOCK_QUOTE=Цитата
+FMT_FOOTNOTE=Сноска
+FMT_HEADING=Заголовок
+FMT_LIST_ITEM=Элемент списка
+FMT_LINE_NUMBER=Номер строки
+FMT_TRANSCRIPT=Транскрипт
+FMT_LYRICS=Текст песни
+FMT_EMAIL=Элекронное письмо
