--- a/src/main/resources/PublishR_strings_ru.properties
+++ b/src/main/resources/PublishR_strings_ru.properties
@@ -22,4 +22,4 @@ FMT_LIST_ITEM=Элемент списка
 FMT_LINE_NUMBER=Номер строки
 FMT_TRANSCRIPT=Транскрипт
 FMT_LYRICS=Текст песни
-FMT_EMAIL=Элекронное письмо
+FMT_EMAIL=Электронное письмо
