Allow to change tag colors through settings dialog

--- a/src/main/resources/PublishR_strings_ru.properties
+++ b/src/main/resources/PublishR_strings_ru.properties
@@ -2,6 +2,10 @@ FILTER_NAME=Документы PublishR
 
 SETTINGS_TITLE=Настройки фильтра PublishR
 SETTINGS_PLAIN_SHORTCUTS=Использовать простые теги (до версии 1.0)
+SETTINGS_EXTRA_TAG_COLOR_EXAMPLE=Дополнительные теги будут такого цвета
+SETTINGS_EXTRA_TEXT_COLOR_EXAMPLE=Текст дополнительных тегов будет такого цвета
+SETTINGS_CHANGE_COLOR_BUTTON=Изменить
+SETTINGS_COLOR_DIALOG_TITLE=Выберите цвет
 
 POPUP_MENU_NAME=Форматирование PublishR
 POPUP_MENU_FORMAT_STRONG=Выделение жирным
